--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
             <p>Gitkurs-app</p>
         </div>
         <nav>
-            <a href="index.html">Hjem</a> | 
+            <a href="index.html">Heim</a> | 
             <a href="about.html">Om</a>
         </nav>
         <div class="content">
-            <h1>Hjem</h1>
+            <h1>Heim</h1>
             <p>...</p>
         </div>
     </body>
